# HomeWork1

./: CMakeLists.txt  LICENSE  animal.cpp  animal.h  beast.cpp  beast.h  bird.cpp  bird.h  container.cpp  container.h  fish.cpp  fish.h  main.cpp  rnd.h  test1.txt  Отчет с характеристиками.txt
Animals/: animal.h  beast.h  bird.h  constants.h  container.cpp  container.h  fish.h  utils.cpp  utils.h
Animals/src/: animal.cpp  beast.cpp  bird.cpp  fish.cpp
